deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issue-deployment
  labels:
    k8s-app: kube-dns
    type: backend
    app: issue-deployment
spec:
  template:
    metadata:
      name: issue-pod
      labels:
        app: issue
        k8s-app: kube-dns
    spec:
      containers:
        - name: issue-container
          image: shobhitsarin/ms_issue:amd
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
          livenessProbe:
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
            httpGet:
              path: /livez
              port: 3000
  selector:
    matchLabels:
      app: issue
  replicas: 3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: issuehistory-deployment
  labels:
    k8s-app: kube-dns
    type: backend
spec:
  template:
    metadata:
      name: issuehistory-pod
      labels:
        app: issuehistory
        k8s-app: kube-dns
    spec:
      containers:
        - name: issuehistory-container
          image: shobhitsarin/ms_issuehistory:amd
          readinessProbe:
            httpGet:
              path: /readyz
              port: 3000
            failureThreshold: 3
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
          livenessProbe:
            failureThreshold: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
            initialDelaySeconds: 10
            httpGet:
              path: /livez
              port: 3000
  selector:
    matchLabels:
      app: issuehistory
  replicas: 3
