lb-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: issue-service
  namespace: kube-system
  labels:
    k8s-app: kube-dns
spec:
  type: LoadBalancer
  selector:
    app: issue
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: issuehistory-service
  namespace: kube-system
  labels:
    k8s-app: kube-dns
spec:
  type: LoadBalancer
  selector:
    app: issuehistory
  ports:
    - port: 3000
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: lolo-service
  namespace: kube-system
spec:
  type: ExternalName
  externalName: httpbin.org
---
apiVersion: v1
kind: Service
metadata:
  name: issue_db
  namespace: kube-system
spec:
  type: ExternalName
  externalName: cluster0.fquxz.mongodb.net
