node-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: issue-service
  labels:
    k8s-app: kube-dns
spec:
  type: NodePort
  selector:
    app: issue
  ports:
    - port: 3000
      nodePort: 30001
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: issuehistory-service
  labels:
    k8s-app: kube-dns
spec:
  type: NodePort
  selector:
    app: issuehistory
  ports:
    - port: 3000
      targetPort: 3000
      nodePort: 30002
