Ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
  name: issue-ingress
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:            
        - backend:
            service:
              name: issue-service
              port:
                number: 3000
          path: /issue/(.*)
          pathType: Prefix
        - backend:
            service:
              name: issuehistory-service
              port:
                number: 3000
          path: /issue_history/(.*)
          pathType: Prefix
